# dockerizing-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
extra-1-compiling-dependencies/: Dockerfile  README.md  slim.Dockerfile
extra-1-need-for-speed/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
extra-1-need-for-speed/need_for_speed/: main.py
extra-1-need-for-speed/tests/: test_endpoint.py
extra-2-need-for-speed/: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
extra-2-pre-commit/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
extra-2-pre-commit/pre_commit/: main.py
extra-3-moving-complexity/: README.md
extra-3-moving-complexity/tests/: test_endpoint.py
src/dockerizing_python/: main.py
step-1-kiss-requirements/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
step-1-kiss-requirements/kiss/: main.py
step-2-kiss-poetry/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
step-2-kiss-poetry/kiss/: main.py
step-3-basic-improvements/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
step-3-basic-improvements/basic_improvements/: main.py
step-4-nontrivial-improvements/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
step-4-nontrivial-improvements/nontrivial/: main.py
step-5-larger-project/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  verbose.Dockerfile
step-5-larger-project/tests/: test_endpoint.py
step-6-compiling-dependencies/: .dockerignore  README.md  docker-compose.yaml  pyproject.toml
tests/: test_endpoint.py
(+3 files in other folders)
