[tool.poetry]
name = "larger-project"
version = "0.1.0"
description = "A demo project to showcase how to wrap a python backend in a container"
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{ from = ".", include = "need_for_speed" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.11"
pytest = "^7.4.4"
coverage = "^7.4.0"
# Only use psycopg2-binary in dev mode, build psycopg2 from source in prod
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
# psycopg2 needs to be built from source within the container
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
