[tool.poetry]
name = "nontirvial"
version = "0.1.0"
description = "A demo project to showcase how to wrap a python backend in a container"
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{ from = ".", include = "basic_improvements" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
uvicorn = {extras = ["standard"], version = "^0.25.0"}
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
